Fixed overflow on option swatch

--- a/assets/main.css
+++ b/assets/main.css
@@ -2976,7 +2976,9 @@ main {
     overflow-x: scroll;
     width: 100%;
     height: 115px;
-    padding-left: 40px;
+    padding-left: 30px;
+    -webkit-box-sizing: border-box;
+            box-sizing: border-box;
   }
 }
 
