--- a/styles/_main-product-page.scss
+++ b/styles/_main-product-page.scss
@@ -246,7 +246,7 @@
 
             input {
                 visibility: hidden;
-                width: 0;
+                width: 0;   
                 position: absolute;
 
                 &:checked + label {
@@ -293,7 +293,8 @@
                     overflow-x: scroll;
                     width: 100%;
                     height: 115px;
-                    padding-left: 40px;
+                    padding-left: 30px;
+                    box-sizing: border-box;
                 }
 
                 .swatch-wrapper {
